Bug 697245 - Generated postscript by ps2write causes limitcheck for save error
Summary: Generated postscript by ps2write causes limitcheck for save error
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PS Writer (show other bugs)
Version: 9.19
Hardware: PC Linux
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-26 14:56 UTC by Doug Moore
Modified: 2016-11-25 05:06 UTC (History)
3 users (show)

See Also:
Customer:
Word Size: ---


Attachments
Source PDF (3.06 MB, application/pdf)
2016-10-26 14:56 UTC, Doug Moore
Details
output postscript file (12.86 MB, application/postscript)
2016-10-26 14:57 UTC, Doug Moore
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Doug Moore 2016-10-26 14:56:43 UTC
Created attachment 13051 [details]
Source PDF

PDF files that have more then 15 pages that are a different size then the rest of the PDF pages causes Printers and Adobe Pro to have a limitcheck error for size. For example, a PDF with mostly pages being USLetter size but have 17 pages in the document that are 9x11 page size. The postscript generated with this command line:

gs -dNOPAUSE -dBATCH -r600 -sDEVICE=ps2write -dSAFER -q -sOutputFile=test.ps -c save pop -f Binder5.pdf

Cause this error when distilled with Adobe pro:

%%[ Error: limitcheck; OffendingCommand: save ]%%

Stack:
/pagesave
false
792
648
0
0
792
648
-dict-
7186


%%[ Flushing: rest of job (to end-of-file) will be ignored ]%%
%%[ Warning: PostScript error. No PDF file produced. ] %%

Printers tested give the same error.

Attached is an example PDF and postscript file.
Comment 1 Doug Moore 2016-10-26 14:57:31 UTC
Created attachment 13052 [details]
output postscript file
Comment 2 Ken Sharp 2016-11-14 07:08:38 UTC
This is caused by limitations in the architecture of Adobe PostScript interpreters.

Commit 0f6067d2531298060392d0e25fa759d320e03021 works around the problem.

NB it would really help to submit specimen files with less content and fewer pages.
Comment 3 Ken Sharp 2016-11-25 05:06:05 UTC
*** Bug 697376 has been marked as a duplicate of this bug. ***